Fix tooltip overlap

--- a/src/css/_aos.scss
+++ b/src/css/_aos.scss
@@ -20,7 +20,7 @@
   }
 
   &.aos-animate:before {
-    animation: blink 2s infinite;
+    animation: blink 2.5s infinite;
   }
 }
 
